--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.15.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "firebase": "^9.22.0",
