--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@googlemaps/js-api-loader": "^1.15.2",
+    "@mui/material": "^5.13.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "firebase": "^9.22.0",
     "next": "13.4.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.2"
   }
 }
