--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@mui/material": "^5.13.2",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
+    "expo": "^48.0.17",
+    "expo-linear-gradient": "~12.1.2",
     "firebase": "^9.22.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-router-dom": "^6.11.2"
   }
 }
