--- a/package.json
+++ b/package.json
@@ -6,22 +6,31 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "node server.js"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@googlemaps/js-api-loader": "^1.15.2",
     "@mui/material": "^5.13.2",
+    "@stripe/react-stripe-js": "^2.1.0",
+    "@stripe/stripe-js": "^1.54.0",
+    "axios": "^1.4.0",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.1.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "expo": "^48.0.17",
     "expo-linear-gradient": "~12.1.2",
+    "express": "^4.18.2",
     "firebase": "^9.22.0",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native-linear-gradient": "^2.6.2",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "stripe": "^12.7.0"
   }
 }
