--- a/package.json
+++ b/package.json
@@ -17,18 +17,23 @@
     "@stripe/stripe-js": "^1.54.0",
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.1.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.3",
     "expo": "^48.0.17",
     "expo-linear-gradient": "~12.1.2",
     "firebase": "^9.22.0",
+    "micro": "^10.0.1",
     "next": "13.4.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-router-dom": "^6.11.2",
-    "stripe": "^12.7.0"
+    "stripe": "^12.8.0"
+  },
+  "devDependencies": {
+    "@tailwindcss/forms": "^0.5.3",
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2"
   }
 }
