--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-native-linear-gradient": "^2.6.2",
     "react-router-dom": "^6.11.2",
+    "sharp": "^0.32.1",
     "stripe": "^12.8.0"
   },
   "devDependencies": {
